# Gomoku

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  custom_cluster_analysis.csv  docker-compose.yml  extract_data.py  format_code.sh  gomoku.py  gomoku_engine.cpp  gomoku_engine.h  parse_weird_moves.py  pre-commit.example  print_stats.py  py_gomoku.cpp  requirements.txt  script.py  todo
.github/workflows/: format-check.yml  gomoku-engine-tests.yml
Docs/: Gomoku-Rules.md  GomokuEngine.md  GomokuKivy.md  Webserver.md
GomokuBack/: Dockerfile  constants.py  data_points_default_d6.txt  gomoku_game.py  gomoku_room.py  pyproject.toml  requirements.txt  server.py  server_gomoku.py  setup.sh
GomokuBack/gkserver/: __init__.py  game_room.py  room_list.py  rooms.py
GomokuEngine/: .env  AI1.cpp  AI1.h  CMakeLists.txt  Dockerfile  Makefile  Makefile copy  Timer.h  create_puzzle.cpp  data_points_default_d6.csv  docker-compose.yml  full_iq_benchmark.sh  gomoku_engine.cpp  gomoku_engine.h  gomoku_structure_pattern.cpp  gomoku_structure_pattern.h  main.cpp  matrix.hpp  old_Makefile  problems.txt  py_gomoku.cpp  relaunch_app.sh
GomokuEngine/inc/: AI1.h  Timer.h  arena.h  game_room.h  gomoku_ai.h  gomoku_ai_data.h  gomoku_engine.h  gomoku_engine_types.h  gomoku_pattern_reconizer.h  matrix.hpp  room.cpp  room.h  test_engine.h  test_room.h  utils.h
GomokuEngine/include/ai/: gomoku_ai.h  gomoku_ai_data.h  gomoku_ai_datav2.h  gomoku_ai_datav3.h  gomoku_ai_interface.h  gomoku_ai_minmaxv2.h  gomoku_ai_minmaxv3.h  test_ai.h
GomokuEngine/include/arena/: ai_data_mutator.h  arena.h
GomokuEngine/include/engine/: gomoku_engine.h  gomoku_engine_types.h  gomoku_pattern_reconizer.h
GomokuEngine/include/matrix/: Matrix.hpp
GomokuEngine/include/room/: game_room.h
GomokuEngine/include/timer/: Timer.h
GomokuEngine/include/utils/: gomoku_utilities.h
GomokuEngine/iq_benchmarks/: cpu1.txt  cpu1_d4.txt  cpu1_d5.txt  cpu1_d6.txt  cpu2.txt  cpu2_d4.txt  cpu2_d5.txt  cpu2_d6.txt  cpu3.txt  cpu3_d4.txt  cpu3_d5.txt  cpu4.txt  cpu4_d4.txt  cpu4_d5.txt  default.txt  default_d4.txt  default_d5.txt  default_d6.txt
GomokuEngine/logs/ai_problems/: v1.txt  v1_depth3.txt  v1_depth4.txt  v1_with_copy_depth3.txt  v2.txt
GomokuEngine/logs/get_structure_at/: v1.txt
GomokuEngine/src/: AI1.cpp  Timer.cpp  arena.cpp  game_room.cpp  gktool.cpp  gomoku_ai.cpp  gomoku_ai_data.cpp  gomoku_engine.cpp  gomoku_pattern_reconizer.cpp  gomoku_structure_pattern.cpp  main.cpp  py_gomoku.cpp  pybinds.cpp  room.cpp  test_engine.cpp  test_room.cpp  utils.cpp
GomokuEngine/src/ai/: gomoku_ai.cpp  gomoku_ai_data.cpp  gomoku_ai_datav2.cpp  gomoku_ai_datav3.cpp  gomoku_ai_minmaxv2.cpp  gomoku_ai_minmaxv3.cpp  test_ai.cpp
GomokuEngine/src/arena/: ai_data_mutator.cpp  arena.cpp
GomokuEngine/src/engine/: gomoku_engine.cpp  gomoku_pattern_reconizer.cpp
GomokuEngine/src/matrix/: Matrix.cpp
GomokuEngine/src/room/: game_room.cpp  game_room_ai.cpp  game_room_rule_layer.cpp
GomokuEngine/src/timer/: Timer.cpp
GomokuEngine/src/utils/: gomoku_utilities.cpp
GomokuEngine/tests/: CMakeLists.txt  ai_test.cpp  engine_test.cpp  matrix_test.cpp  room_test.cpp  structure_test.cpp  timer_test.cpp  utils_test.cpp
GomokuFront/: .env  Dockerfile  package-lock.json  package.json  tailwind.config.js
GomokuFront/src/: AIstyles.css  App.tsx  GameBoard.tsx  GameSettings.tsx  GomokuGameBoard.tsx  GomokuOnlineRoom.tsx  RoleModal.css  index.css  index.tsx  interface.ts  socket.ts
GomokuFront/src/components/: Board.tsx  Button.tsx  ListMoves.tsx  Player1.tsx  Player2.tsx  PlayerAvailableStatus.tsx  PlayerStats.tsx  RoleModal.tsx  ScoreBoard.tsx  Square.tsx  Stone.tsx
GomokuFront/src/hooks/: useGameLogic.tsx  useGameLogicv2.tsx  useOnlineGameLogic.tsx
GomokuFront/src/pages/: OnlineRoomPage.tsx  RoomPage.tsx
GomokuFront/src/utils/: api.ts  utils.ts
GomokuKivy/: Makefile  gomoku.py  gomokuTerminal.py
GomokuKivy/app/: gomoku_app.py  shared_object.py
GomokuKivy/core/: callback_center.py  gomoku_game.py  gomoku_room.py
GomokuKivy/resources/: gomoku.kv
GomokuKivy/widgets/: game_infos_widget.py  gomoku_board_widget.py  root_widget.py
GomokuKivy/widgets/game/: game_action_result_widget.py  game_board_widget.py  game_frame_widget.py  game_infos_player_indicator_widget.py  game_infos_widget.py  game_move_list_widget.py  game_root_widget.py  game_screen.py
GomokuKivy/widgets/menu/: menu_root_widget.py  menu_screen.py
